--- a/index.html
+++ b/index.html
@@ -3,36 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Private - Betta Ke Liye</title>
+  <title>Betta Ke Liye</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #fce4ec;
-      position: relative;
       min-height: 100vh;
-      overflow: hidden;
       background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      background-repeat: no-repeat;
+      overflow-x: hidden;
     }
 
-    /* Galaxy Stars */
     .stars, .twinkling, .moon {
-      position: absolute;
+      position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      display: block;
       z-index: 0;
+      pointer-events: none;
     }
 
     .stars {
       background: url('https://i.imgur.com/bAI8qVN.png') repeat;
       animation: moveStars 200s linear infinite;
+      filter: blur(1px);
     }
 
     .twinkling {
       background: url('https://i.imgur.com/3jK5n7w.png') repeat;
       animation: moveTwinkling 100s linear infinite;
+      filter: blur(1px);
     }
 
     .moon {
@@ -42,9 +45,9 @@
       height: 150px;
       top: 30px;
       right: 30px;
-      left: auto;
-      z-index: 0;
+      position: absolute;
       animation: floatMoon 10s ease-in-out infinite alternate;
+      filter: drop-shadow(0 0 15px #ffffffcc);
     }
 
     @keyframes moveStars {
@@ -65,10 +68,10 @@
     .container {
       position: relative;
       z-index: 1;
+      padding: 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px;
     }
 
     .password-box {
@@ -100,8 +103,8 @@
       display: none;
       flex-direction: column;
       align-items: center;
-      animation: fadeIn 1.5s ease-in-out forwards;
       margin-top: 20px;
+      padding-bottom: 50px;
     }
 
     h1 {
@@ -110,27 +113,27 @@
       margin: 20px 10px;
       animation: slideIn 1.2s ease-in-out;
       color: #ffb3d9;
-      text-shadow: 0 0 10px #ff80ab;
+      text-shadow: 0 0 8px #ff80ab, 0 0 20px #ffc0cb;
     }
 
     .photo {
       width: 95%;
       max-width: 400px;
       border-radius: 20px;
-      box-shadow: 0 4px 15px rgba(255,255,255,0.2);
+      box-shadow: 0 0 25px rgba(255,255,255,0.3), 0 0 10px #ff80ab;
       margin: 20px 0;
       animation: zoomIn 1.2s ease-in-out;
     }
 
     .message {
-      background: rgba(255, 240, 246, 0.9);
+      background: rgba(255, 240, 246, 0.85);
       color: #4a1c32;
       border-radius: 15px;
       padding: 20px;
       width: 95%;
       max-width: 600px;
       text-align: center;
-      box-shadow: 0 0 15px rgba(255,255,255,0.1);
+      box-shadow: 0 0 15px rgba(255,182,193,0.2);
       animation: fadeInUp 1.4s ease-in-out;
     }
 
@@ -139,6 +142,7 @@
       font-weight: bold;
       font-style: italic;
       font-size: 18px;
+      text-shadow: 0 0 5px #ff80ab;
     }
 
     .emotional {
@@ -151,13 +155,14 @@
       text-align: center;
       max-width: 90%;
       backdrop-filter: blur(5px);
+      box-shadow: 0 0 10px rgba(255,192,203,0.3);
+      text-shadow: 0 0 4px #ffc0cb;
     }
 
     audio {
       margin-top: 20px;
     }
 
-    /* Animations */
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
@@ -178,7 +183,6 @@
       to { transform: translateY(0); opacity: 1; }
     }
 
-    /* Mobile optimization */
     @media screen and (max-width: 480px) {
       h1 { font-size: 22px; }
       .message { padding: 15px; font-size: 14px; }
@@ -200,7 +204,7 @@
     </div>
 
     <div id="content">
-      <h1>I lovee youu sooo muchh betttaa</h1>
+      <h1>I love you so much Betta</h1>
       <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
       <div class="message">
         <p>Hi Betta,</p>
@@ -212,7 +216,7 @@
       <img src="Photo2.jpg" alt="Tum dono" class="photo" />
 
       <div class="emotional">
-        I miss you so much betta... please wapas aa ja... tera Betuuu bina tere adhura hai. 💖
+        I miss you so much betta... <br>please wapas aa ja... <br>tera Betuuu bina tere adhura hai. <br><br>**Tujhse hi roshan hai meri duniya** <br>tum hi toh ho sab kuch... <br><span style="font-size:20px;">**Dil se**</span> <span style="font-size:24px;">❤️</span>
       </div>
 
       <audio id="bg-music" loop autoplay>
