--- a/index.html
+++ b/index.html
@@ -3,81 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Betta Ke Liye</title>
+  <title>Private - Betta Ke Liye</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #fce4ec;
+      position: relative;
       min-height: 100vh;
-      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
       overflow-x: hidden;
-    }
-
-    .stars, .twinkling, .moon {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      z-index: 0;
-      pointer-events: none;
-    }
-
-    .stars {
-      background: url('https://i.imgur.com/bAI8qVN.png') repeat;
-      animation: moveStars 200s linear infinite;
-      filter: blur(1px);
-    }
-
-    .twinkling {
-      background: url('https://i.imgur.com/3jK5n7w.png') repeat;
-      animation: moveTwinkling 100s linear infinite;
-      filter: blur(1px);
-    }
-
-    .moon {
-      background: url('https://i.imgur.com/kq2VYKP.png') no-repeat;
-      background-size: 150px;
-      width: 150px;
-      height: 150px;
-      top: 30px;
-      right: 30px;
-      position: absolute;
-      animation: floatMoon 10s ease-in-out infinite alternate;
-      filter: drop-shadow(0 0 15px #ffffffcc);
-    }
-
-    @keyframes moveStars {
-      from { background-position: 0 0; }
-      to { background-position: -10000px 5000px; }
-    }
-
-    @keyframes moveTwinkling {
-      from { background-position: 0 0; }
-      to { background-position: 10000px 0; }
-    }
-
-    @keyframes floatMoon {
-      from { transform: translateY(0); }
-      to { transform: translateY(20px); }
+      background: url('bg.jpg') no-repeat center center fixed;
+      background-size: cover;
     }
 
     .container {
       position: relative;
       z-index: 1;
-      padding: 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding: 20px;
     }
 
     .password-box {
       text-align: center;
       margin-top: 100px;
       animation: fadeIn 2s ease-in-out;
+      background: rgba(0,0,0,0.6);
+      padding: 20px;
+      border-radius: 12px;
+      backdrop-filter: blur(5px);
     }
 
     input[type="password"] {
@@ -103,8 +58,8 @@
       display: none;
       flex-direction: column;
       align-items: center;
+      animation: fadeIn 1.5s ease-in-out forwards;
       margin-top: 20px;
-      padding-bottom: 50px;
     }
 
     h1 {
@@ -113,27 +68,27 @@
       margin: 20px 10px;
       animation: slideIn 1.2s ease-in-out;
       color: #ffb3d9;
-      text-shadow: 0 0 8px #ff80ab, 0 0 20px #ffc0cb;
+      text-shadow: 0 0 10px #ff80ab;
     }
 
     .photo {
       width: 95%;
       max-width: 400px;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(255,255,255,0.3), 0 0 10px #ff80ab;
+      box-shadow: 0 0 25px rgba(255,255,255,0.2), 0 0 10px #ff80ab;
       margin: 20px 0;
       animation: zoomIn 1.2s ease-in-out;
     }
 
     .message {
-      background: rgba(255, 240, 246, 0.85);
+      background: rgba(255, 240, 246, 0.9);
       color: #4a1c32;
       border-radius: 15px;
       padding: 20px;
       width: 95%;
       max-width: 600px;
       text-align: center;
-      box-shadow: 0 0 15px rgba(255,182,193,0.2);
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
       animation: fadeInUp 1.4s ease-in-out;
     }
 
@@ -163,6 +118,7 @@
       margin-top: 20px;
     }
 
+    /* Animations */
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
@@ -191,10 +147,6 @@
   </style>
 </head>
 <body>
-  <div class="stars"></div>
-  <div class="twinkling"></div>
-  <div class="moon"></div>
-
   <div class="container">
     <div class="password-box">
       <h2>Enter Password to Continue</h2>
@@ -204,7 +156,7 @@
     </div>
 
     <div id="content">
-      <h1>I love you so much Betta</h1>
+      <h1>I lovee youu sooo muchh betttaa</h1>
       <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
       <div class="message">
         <p>Hi Betta,</p>
@@ -216,7 +168,7 @@
       <img src="Photo2.jpg" alt="Tum dono" class="photo" />
 
       <div class="emotional">
-        I miss you so much betta... <br>please wapas aa ja... <br>tera Betuuu bina tere adhura hai. <br><br>**Tujhse hi roshan hai meri duniya** <br>tum hi toh ho sab kuch... <br><span style="font-size:20px;">**Dil se**</span> <span style="font-size:24px;">❤️</span>
+        I miss you so much betttaa jldii aajaaa 🥺❤️
       </div>
 
       <audio id="bg-music" loop autoplay>
