--- a/index.html
+++ b/index.html
@@ -9,92 +9,39 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #fce4ec;
-      position: relative;
-      min-height: 100vh;
-      overflow: hidden;
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
-      background-attachment: fixed;
-      animation: backgroundAnimation 20s infinite;
+      overflow-x: hidden;
     }
 
-    /* Animation for Background */
-    @keyframes backgroundAnimation {
-      0% { background-position: 0 0; }
-      50% { background-position: 50% 50%; }
-      100% { background-position: 0 0; }
-    }
-
-    .stars, .twinkling, .moon {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      z-index: 0;
-    }
-
-    .stars {
-      background: url('https://i.imgur.com/bAI8qVN.png') repeat;
-      animation: moveStars 200s linear infinite;
-    }
-
-    .twinkling {
-      background: url('https://i.imgur.com/3jK5n7w.png') repeat;
-      animation: moveTwinkling 100s linear infinite;
-    }
-
-    .moon {
-      background: url('https://i.imgur.com/kq2VYKP.png') no-repeat;
-      background-size: 150px;
-      width: 150px;
-      height: 150px;
-      top: 30px;
-      right: 30px;
-      left: auto;
-      z-index: 0;
-      animation: floatMoon 10s ease-in-out infinite alternate;
-    }
-
-    /* Keyframes for the background animations */
-    @keyframes moveStars {
-      from { background-position: 0 0; }
-      to { background-position: -10000px 5000px; }
-    }
-
-    @keyframes moveTwinkling {
-      from { background-position: 0 0; }
-      to { background-position: 10000px 0; }
-    }
-
-    @keyframes floatMoon {
-      from { transform: translateY(0); }
-      to { transform: translateY(20px); }
-    }
-
-    .container {
-      position: relative;
-      z-index: 1;
+    .overlay {
+      backdrop-filter: blur(2px);
+      min-height: 100vh;
+      width: 100%;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      padding: 20px;
+      flex-direction: column;
     }
 
     .password-box {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 30px;
+      border-radius: 20px;
       text-align: center;
-      margin-top: 100px;
+      box-shadow: 0 0 20px #fff5;
       animation: fadeIn 2s ease-in-out;
     }
 
-    input[type="password"] {
-      padding: 12px;
+    .password-box input[type="password"] {
+      padding: 10px;
       border-radius: 10px;
       border: none;
-      width: 80%;
-      max-width: 250px;
+      width: 200px;
     }
 
-    button {
-      margin-top: 10px;
+    .password-box button {
+      margin-top: 15px;
       padding: 10px 25px;
       background-color: #e91e63;
       color: white;
@@ -108,38 +55,47 @@
       display: none;
       flex-direction: column;
       align-items: center;
-      animation: fadeIn 1.5s ease-in-out forwards;
-      margin-top: 20px;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .heart {
+      font-size: 50px;
+      cursor: pointer;
+      animation: pulse 2s infinite;
+      margin-top: 30px;
+      color: #ff80ab;
+      text-shadow: 0 0 15px #ff99c9;
+    }
+
+    .hidden-section {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      animation: fadeInUp 1.5s ease-in-out;
     }
 
     h1 {
-      text-align: center;
-      font-size: 28px;
-      margin: 20px 10px;
-      animation: slideIn 1.2s ease-in-out;
+      font-size: 26px;
       color: #ffb3d9;
       text-shadow: 0 0 10px #ff80ab;
     }
 
     .photo {
-      width: 95%;
+      width: 90%;
       max-width: 400px;
       border-radius: 20px;
-      box-shadow: 0 4px 15px rgba(255,255,255,0.2);
+      box-shadow: 0 0 25px rgba(255,255,255,0.3), 0 0 10px #ff80ab;
       margin: 20px 0;
-      animation: zoomIn 1.2s ease-in-out;
     }
 
     .message {
-      background: rgba(255, 240, 246, 0.9);
+      background: rgba(255, 240, 246, 0.85);
       color: #4a1c32;
       border-radius: 15px;
       padding: 20px;
-      width: 95%;
       max-width: 600px;
-      text-align: center;
-      box-shadow: 0 0 15px rgba(255,255,255,0.1);
-      animation: fadeInUp 1.4s ease-in-out;
+      box-shadow: 0 0 15px rgba(255,182,193,0.2);
     }
 
     .signature {
@@ -147,6 +103,7 @@
       font-weight: bold;
       font-style: italic;
       font-size: 18px;
+      text-shadow: 0 0 5px #ff80ab;
     }
 
     .emotional {
@@ -156,29 +113,18 @@
       background: rgba(255, 255, 255, 0.1);
       padding: 10px 15px;
       border-radius: 12px;
-      text-align: center;
-      max-width: 90%;
       backdrop-filter: blur(5px);
+      box-shadow: 0 0 10px rgba(255,192,203,0.3);
+      text-shadow: 0 0 4px #ffc0cb;
     }
 
     audio {
       margin-top: 20px;
     }
 
-    /* Animations */
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
-    }
-
-    @keyframes slideIn {
-      from { transform: translateX(-100px); opacity: 0; }
-      to { transform: translateX(0); opacity: 1; }
-    }
-
-    @keyframes zoomIn {
-      from { transform: scale(0.8); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
     }
 
     @keyframes fadeInUp {
@@ -186,21 +132,21 @@
       to { transform: translateY(0); opacity: 1; }
     }
 
-    /* Mobile optimization */
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.2); }
+      100% { transform: scale(1); }
+    }
+
     @media screen and (max-width: 480px) {
       h1 { font-size: 22px; }
-      .message { padding: 15px; font-size: 14px; }
-      .signature { font-size: 16px; }
+      .message { font-size: 14px; }
     }
   </style>
 </head>
 <body>
-  <div class="stars"></div>
-  <div class="twinkling"></div>
-  <div class="moon"></div>
-
-  <div class="container">
-    <div class="password-box">
+  <div class="overlay">
+    <div class="password-box" id="passwordBox">
       <h2>Enter Password to Continue</h2>
       <input type="password" id="passwordInput" placeholder="Enter password" />
       <br />
@@ -208,25 +154,28 @@
     </div>
 
     <div id="content">
-      <h1>I lovee youu so muchh bettaaa 💕♾️</h1>
-      <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
-      <div class="message">
-        <p>Hi Betta,</p>
-        <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye.</p>
-        <p>Tu sirf meri nahi... meri jaan hai. Tu meri muskurahat, meri har dua ka jawab hai. Betta, main humesha tera sath chahta hoon.</p>
-        <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon.</p>
-        <div class="signature">Your Betuuu</div>
-      </div>
-      <img src="Photo2.jpg" alt="Tum dono" class="photo" />
+      <div class="heart" onclick="revealContent()">❤️</div>
 
-      <div class="emotional">
-        I miss you so much betta... please wapas aa ja... tera Betuuu bina tere adhura hai. 💖😭
-      </div>
+      <div class="hidden-section" id="hiddenSection">
+        <h1>I lovee youu so muchh bettaaa 💕♾️</h1>
+        <img src="photo1.jpg" alt="Memory 1" class="photo" />
 
-      <audio id="bg-music" loop>
-        <source src="Meherbaan_intro.mp3" type="audio/mpeg" />
-        Your browser does not support the audio element.
-      </audio>
+        <div class="message">
+          <p>Hi Betta 💖</p>
+          <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai 🌍. Tere bina har din adhoora lagta hai 🥺. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye 🌙.</p>
+          <p>Tu sirf meri nahi... meri jaan hai ❤️. Tu meri muskurahat, meri har dua ka jawab hai ✨. Main humesha tera sath chahta hoon 🤝.</p>
+          <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon 💭. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon 💞.</p>
+          <div class="signature">— Tera Betuuu 🐻</div>
+        </div>
+
+        <img src="photo2.jpg" alt="Memory 2" class="photo" />
+        <div class="emotional">I miss you so much betttaa 😢 jldii aajaaa 🫂💗</div>
+
+        <audio id="bg-music" loop>
+          <source src="Meherbaan_intro.mp3" type="audio/mpeg" />
+          Your browser does not support the audio element.
+        </audio>
+      </div>
     </div>
   </div>
 
@@ -234,13 +183,17 @@
     function checkPassword() {
       const input = document.getElementById("passwordInput").value;
       if (input === "7709826839") {
-        document.querySelector(".password-box").style.display = "none";
-        const content = document.getElementById("content");
-        content.style.display = "flex";
-        document.getElementById("bg-music").play();
+        document.getElementById("passwordBox").style.display = "none";
+        document.getElementById("content").style.display = "flex";
       } else {
         alert("Wrong password. Try again.");
       }
+    }
+
+    function revealContent() {
+      const section = document.getElementById("hiddenSection");
+      section.style.display = "flex";
+      document.getElementById("bg-music").play();
     }
   </script>
 </body>
